test/param/kbrady/mismatchIntDivZero.good
mismatchIntDivZero.chpl:3: error: param divide by zero
