test/param/kbrady/mismatchIntDivZero.chpl
param zero = 0;
var six = 6;
var bad = six/zero;
writeln(bad);
